# crispr_screen

./: .gitignore  404.html  Cargo.toml  LICENSE.md  README.md  index.html  install.html  introduction.html  justfile  methods.html  print.html  searchindex.js  searchindex.json  usage.html
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
doc/: book.toml
doc/src/: SUMMARY.md  install.md  introduction.md  methods.md  usage.md
doc/src/methods/: correction.md  dispersion.md  enrichment.md  inc.md  normalization.md  rra.md
doc/src/usage/: customized_run.md  expected_format.md  quick_start.md
methods/: correction.html  dispersion.html  enrichment.html  inc.html  normalization.html  rra.html
src/: cli.rs  differential_expression.rs  main.rs  resample.rs  run_aggregation.rs
src/aggregation/: compute_aggregation.rs  mod.rs  results.rs  utils.rs
src/aggregation/inc/: inc.rs  mod.rs  mwu.rs
src/aggregation/mwu_inc/: inc.rs  mod.rs  mwu.rs
src/aggregation/rra/: alpha_rra.rs  mod.rs  permutations.rs  robust_rank.rs  utils.rs
src/enrich/: enrichment_testing.rs  mod.rs  results.rs
src/io/: gene_frame.rs  hit_list.rs  mod.rs  screenviz.rs  sgrna_frame.rs  simple_frame.rs  utils.rs
src/math/: logged_ols.rs  median_ratio_norm.rs  mod.rs  ols.rs  rra.rs  total_norm.rs
src/model/: logged_ols.rs  math.rs  mod.rs  model_mean_variance.rs  ols.rs  sqmean.rs  wols.rs
src/norm/: median_ratio_norm.rs  mod.rs  normalize_counts.rs  total_norm.rs
src/rra/: alpha_rra.rs  mod.rs  permutations.rs  robust_rank.rs  utils.rs
src/utils/: agg.rs  config.rs  dfutils.rs  enrichment_testing.rs  filter.rs  io.rs  logging.rs  math.rs  mod.rs  model_mean_variance.rs  normalization.rs
usage/: customized_run.html  expected_format.html  quick_start.html
