[package]
name = "crispr_screen"
version = "0.2.7"
edition = "2021"
description = "A fast and configurable differential expression analysis tool for CRISPR screens"
license = "MIT"
documentation = "https://docs.rs/crispr_screen"
repository = "https://github.com/noamteyssier/crispr_screen"
homepage = "https://noamteyssier.github.io/crispr_screen/"
keywords = ["cli", "CRISPR", "bioinformatics", "degs", "sgRNA"]
categories = ["command-line-utilities", "science"]

[dependencies]
adjustp = "0.1.6"
# alpha-rra = "0.2.2"
alpha-rra = { git = "https://github.com/noamteyssier/alpha-rra", branch = "30-create-a-heuristic-rra" }
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
csv = "1.3.0"
hashbrown = "0.14.5"
intc = "0.3.3"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
noisy_float = "0.2.0"
rayon = "1.10.0"
regex = "1.10.5"
statrs = "0.17.1"
thiserror = "1.0.61"
