[package]
name = "crispr_screen"
version = "0.3.10"
edition = "2021"
description = "A fast and configurable differential expression analysis tool for CRISPR screens"
license = "MIT"
documentation = "https://docs.rs/crispr_screen"
repository = "https://github.com/noamteyssier/crispr_screen"
homepage = "https://noamteyssier.github.io/crispr_screen/"
keywords = ["cli", "CRISPR", "bioinformatics", "degs", "sgRNA"]
categories = ["command-line-utilities", "science"]

[dependencies]
adjustp = "0.1.5"
alpha-rra = "0.3.1"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
hashbrown = "0.14.3"
intc = "0.3.4"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
ndarray-stats = "0.6.0"
rayon = "1.8.1"
regex = "1.10.3"
statrs = "0.17.1"
geopagg = "0.2.4"
polars = { version = "0.42.0", default-features = false, features = ["csv"] }
getset = "0.1.2"
bon = "2.1.1"

[profile.release]
lto = true
