[package]
name = "crispr_screen"
version = "0.3.19"
edition = "2021"
description = "A fast and configurable differential expression analysis tool for CRISPR screens"
license = "MIT"
documentation = "https://docs.rs/crispr_screen"
repository = "https://github.com/noamteyssier/crispr_screen"
homepage = "https://noamteyssier.github.io/crispr_screen/"
keywords = ["cli", "CRISPR", "bioinformatics", "degs", "sgRNA"]
categories = ["command-line-utilities", "science"]

[dependencies]
adjustp = "0.1.6"
alpha-rra = "0.3.3"
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.1.0"
hashbrown = "0.15.0"
intc = "0.3.6"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
ndarray-stats = "0.6.0"
rayon = "1.10.0"
regex = "1.11.0"
statrs = "0.17.1"
geopagg = "0.3.0"
polars = { version = "0.43.1", default-features = false, features = ["csv"] }
getset = "0.1.3"
bon = "2.3.0"
rand_chacha = "0.3.1"
rand = "0.8.5"
rand_distr = "0.4.3"
env_logger = "0.11.8"
log = "0.4.27"
